fix the negative margin and contrast of the footer

--- a/front/public/css/style.css
+++ b/front/public/css/style.css
@@ -2792,7 +2792,7 @@ h4.panel-title a.collapsed:before {
 }
 
 .large-neg-margin {
-  margin-bottom: -140px !important;
+  margin-bottom: calc(-2 * var(--diagonal-offset)) !important;
 }
 
 .on-top {
